# seqpat

./: .gitignore  README.md  pyproject.toml
examples/: apt_show_json.py  lshw_jsonl.py
seqpat/: __init__.py  patterns.py  utility_functions.py
tests/: test_patterns.py  test_utility_functions.py
